--- a/test2/Views/EditLeaveRequestWindow.xaml
+++ b/test2/Views/EditLeaveRequestWindow.xaml
@@ -9,31 +9,52 @@
     <Window.Resources>
         <converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
-    <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock TextWrapping="Wrap" Text="Id"/>
-            <TextBox x:Name="IdTextBox" Text="{Binding Id}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Employee"/>
-            <TextBox x:Name="EmployeeTextBox" Text="{Binding Employee}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Absence Reason (Required)"/>
-            <ComboBox Name="comboBox" IsEnabled="{Binding IsComboBoxEnabled}" IsEditable="{Binding IsComboBoxEditable}"  ItemsSource="{Binding Items}"
+    <Border CornerRadius="12">
+        <Border CornerRadius="10"                     
+BorderThickness="1"
+Opacity="0.75">
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="0,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18" Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18"  Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid>
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <TextBlock TextWrapping="Wrap" Text="Id"/>
+                    <TextBox x:Name="IdTextBox" Text="{Binding Id}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Employee"/>
+                    <TextBox x:Name="EmployeeTextBox" Text="{Binding Employee}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Absence Reason (Required)"/>
+                    <ComboBox Name="comboBox" IsEnabled="{Binding IsComboBoxEnabled}" IsEditable="{Binding IsComboBoxEditable}"  ItemsSource="{Binding Items}"
                   SelectedItem="{Binding SelectedItem}" 
 Width="200" 
 Height="30" 
 VerticalAlignment="Center" 
 HorizontalAlignment="Center"
 >
-                
 
-            </ComboBox>
-            <TextBlock TextWrapping="Wrap" Text="Start Date (Required)"/>
-            <DatePicker Name="StartDate"  SelectedDate="{Binding StartDate}" />
-            <TextBlock TextWrapping="Wrap" Text="End Date (Required)"/>
-            <DatePicker Name="EndDate" SelectedDate="{Binding EndDate}" />
-            <TextBlock TextWrapping="Wrap" Text="Comment"/>
-            <TextBox x:Name="CommentTextBox" IsReadOnly="{Binding IsTextBoxReadOnly}" Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Status"/>
-            <ComboBox Name="comboBox2" IsEnabled="{Binding IsComboBoxEnabled2}" IsEditable="{Binding IsComboBoxEditable2, Mode=TwoWay}" ItemsSource="{Binding Items2}"
+
+                    </ComboBox>
+                    <TextBlock TextWrapping="Wrap" Text="Start Date (Required)"/>
+                    <DatePicker Name="StartDate"  SelectedDate="{Binding StartDate}" />
+                    <TextBlock TextWrapping="Wrap" Text="End Date (Required)"/>
+                    <DatePicker Name="EndDate" SelectedDate="{Binding EndDate}" />
+                    <TextBlock TextWrapping="Wrap" Text="Comment"/>
+                    <TextBox x:Name="CommentTextBox" IsReadOnly="{Binding IsTextBoxReadOnly}" Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Status"/>
+                    <ComboBox Name="comboBox2" IsEnabled="{Binding IsComboBoxEnabled2}" IsEditable="{Binding IsComboBoxEditable2, Mode=TwoWay}" ItemsSource="{Binding Items2}"
                   SelectedItem="{Binding SelectedItem2}"
 Width="200" 
 Height="30" 
@@ -41,11 +62,13 @@ VerticalAlignment="Center"
 HorizontalAlignment="Center"
 >
 
-                
 
-            </ComboBox>
-            <Button x:Name="myButton" Content="Update" Visibility="{Binding IsButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Width="200"  Command="{Binding UpdateCommand}"/>
-            <Button x:Name="myButton2" Content="Cancel Request" Visibility="{Binding IsButtonVisible2, Converter={StaticResource BooleanToVisibilityConverter}}" Width="200"  Command="{Binding CancelCommand}"/>
-        </StackPanel>
-    </Grid>
+
+                    </ComboBox>
+                    <Button x:Name="myButton" Content="Update" Visibility="{Binding IsButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Width="200"  Command="{Binding UpdateCommand}"/>
+                    <Button x:Name="myButton2" Content="Cancel Request" Visibility="{Binding IsButtonVisible2, Converter={StaticResource BooleanToVisibilityConverter}}" Width="200"  Command="{Binding CancelCommand}"/>
+                </StackPanel>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
