--- a/test2/Views/EmployesWindow.xaml
+++ b/test2/Views/EmployesWindow.xaml
@@ -9,54 +9,78 @@
     <Window.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
-    <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Height="900">
-            <TextBlock TextWrapping="Wrap" Text="Id"/>
-            <TextBox x:Name="IdTextBox" Text="{Binding Id}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <TextBlock TextWrapping="Wrap" Text="Username"/>
-            <TextBox x:Name="UsernameTextBox" Text="{Binding Username}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            
-            <TextBlock TextWrapping="Wrap" Text="Full Name"/>
-            <TextBox x:Name="FullNameTextBox" Text="{Binding FullName}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <TextBlock TextWrapping="Wrap" Text="Subdivision"/>
-            <TextBox x:Name="SubdivisionTextBox" Text="{Binding Subdivisionn}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <TextBlock TextWrapping="Wrap" Text="Position"/>
-            <TextBox x:Name="PositionTextBox" Text="{Binding Positionn}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <TextBlock TextWrapping="Wrap" Text="Status"/>
-            <TextBox x:Name="StatusTextBox" Text="{Binding Status}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <TextBlock TextWrapping="Wrap" Text="People Partner"/>
-            <TextBox x:Name="PeoplePartnerTextBox" Text="{Binding PeoplePartner}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <TextBlock TextWrapping="Wrap" Text="Out of office Balance"/>
-            <TextBox x:Name="OutOfOfficeBalanceTextBox" Text="{Binding OutOfOfficeBalance}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            
-            <TextBlock TextWrapping="Wrap" Text="Assigned project"/>
-            <TextBox x:Name="AssignedProjectTextBox" Text="{Binding AssignedProject}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
-            <Button Content="Filter" Command="{Binding FilterCommand}" Width="200" HorizontalAlignment="Left"/>
-            <Button  x:Name="NewButton" Visibility="{Binding IsButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding NewEmployeeCommand}" Content="New Employee" Width="200" HorizontalAlignment="Left"/>
+    <Border CornerRadius="12">
+        <Border CornerRadius="10"                     
+BorderThickness="1"
+Opacity="0.75">
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="0,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18" Offset="1"/>
 
-            <DataGrid x:Name="ProjectDataGrid" ItemsSource="{Binding FilteredEmployes}" 
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18"  Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.Background>
+
+            <Grid>
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Height="900">
+                    <TextBlock TextWrapping="Wrap" Text="Id"/>
+                    <TextBox x:Name="IdTextBox" Text="{Binding Id}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+                    <TextBlock TextWrapping="Wrap" Text="Username"/>
+                    <TextBox x:Name="UsernameTextBox" Text="{Binding Username}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+
+                    <TextBlock TextWrapping="Wrap" Text="Full Name"/>
+                    <TextBox x:Name="FullNameTextBox" Text="{Binding FullName}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+                    <TextBlock TextWrapping="Wrap" Text="Subdivision"/>
+                    <TextBox x:Name="SubdivisionTextBox" Text="{Binding Subdivisionn}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+                    <TextBlock TextWrapping="Wrap" Text="Position"/>
+                    <TextBox x:Name="PositionTextBox" Text="{Binding Positionn}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+                    <TextBlock TextWrapping="Wrap" Text="Status"/>
+                    <TextBox x:Name="StatusTextBox" Text="{Binding Status}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+                    <TextBlock TextWrapping="Wrap" Text="People Partner"/>
+                    <TextBox x:Name="PeoplePartnerTextBox" Text="{Binding PeoplePartner}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+                    <TextBlock TextWrapping="Wrap" Text="Out of office Balance"/>
+                    <TextBox x:Name="OutOfOfficeBalanceTextBox" Text="{Binding OutOfOfficeBalance}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+
+                    <TextBlock TextWrapping="Wrap" Text="Assigned project"/>
+                    <TextBox x:Name="AssignedProjectTextBox" Text="{Binding AssignedProject}" Width="200" Margin="0,0,0,10 " HorizontalAlignment="Left"/>
+                    <Button Content="Filter" Command="{Binding FilterCommand}" Width="200" HorizontalAlignment="Left"/>
+                    <Button  x:Name="NewButton" Visibility="{Binding IsButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding NewEmployeeCommand}" Content="New Employee" Width="200" HorizontalAlignment="Left"/>
+
+                    <DataGrid x:Name="ProjectDataGrid" ItemsSource="{Binding FilteredEmployes}" 
           SelectedItem="{Binding SelectedEmployee, Mode=TwoWay}" behaviors:DoubleClickBehavior.Command="{Binding RowDoubleClickCommand}" AutoGenerateColumns="False" 
   CanUserAddRows="True" CanUserDeleteRows="True"
   CanUserSortColumns="True" IsReadOnly="True"
   SelectionMode="Single">
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="Username" Binding="{Binding Username}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="Full Name" Binding="{Binding FullName , StringFormat=dd/MM/yyyy}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="Subdivision" Binding="{Binding Subdivisionn}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="Position" Binding="{Binding Positionn}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="Status" Binding="{Binding Status}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="People Partner" Binding="{Binding PeoplePartner}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="Out of OfficeBalance" Binding="{Binding Out_of_OfficeBalance}" IsReadOnly="False"/>
-                    <DataGridTextColumn Header="Assigned Project" Binding="{Binding AssignedProject}" IsReadOnly="False"/>
-                </DataGrid.Columns>
-                <DataGrid.RowStyle>
-                    <Style TargetType="DataGridRow">
-                        <Setter Property="Focusable" Value="True" />
-                        <Setter Property="behaviors:DoubleClickBehavior.Command" Value="{Binding DataContext.RowDoubleClickCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
-                    </Style>
-                </DataGrid.RowStyle>
-            </DataGrid>
-        </StackPanel>
-    </Grid>
+                        <DataGrid.Columns>
+                            <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False"/>
+                            <DataGridTextColumn Header="Username" Binding="{Binding Username}" IsReadOnly="False"/>
+                            <DataGridTextColumn Header="Full Name" Binding="{Binding FullName , StringFormat=dd/MM/yyyy}" IsReadOnly="False"/>
+                            <DataGridTextColumn Header="Subdivision" Binding="{Binding Subdivisionn}" IsReadOnly="False"/>
+                            <DataGridTextColumn Header="Position" Binding="{Binding Positionn}" IsReadOnly="False"/>
+                            <DataGridTextColumn Header="Status" Binding="{Binding Status}" IsReadOnly="False"/>
+                            <DataGridTextColumn Header="People Partner" Binding="{Binding PeoplePartner}" IsReadOnly="False"/>
+                            <DataGridTextColumn Header="Out of OfficeBalance" Binding="{Binding Out_of_OfficeBalance}" IsReadOnly="False"/>
+                            <DataGridTextColumn Header="Assigned Project" Binding="{Binding AssignedProject}" IsReadOnly="False"/>
+                        </DataGrid.Columns>
+                        <DataGrid.RowStyle>
+                            <Style TargetType="DataGridRow">
+                                <Setter Property="Focusable" Value="True" />
+                                <Setter Property="behaviors:DoubleClickBehavior.Command" Value="{Binding DataContext.RowDoubleClickCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}" />
+                            </Style>
+                        </DataGrid.RowStyle>
+                    </DataGrid>
+                </StackPanel>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
