--- a/test2/Views/MainWindow.xaml
+++ b/test2/Views/MainWindow.xaml
@@ -7,15 +7,37 @@
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    
-    <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock TextWrapping="Wrap" Text="Username"/>
-            <TextBox Name="UsernameTextBox" Text="{Binding Username}" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Password"/>
-            <PasswordBox Name="PasswordBox" helpers:PasswordHelper.Attach="True"  helpers:PasswordHelper.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
-            <Button Content="Login" Command="{Binding LoginCommand}" Width="200"  Margin="0,0,0,10"/>
-            <Button Content="Register" Command="{Binding RegisterCommand}" Width="200" />
-        </StackPanel>
-    </Grid>
+    <Border CornerRadius="12">
+        <Border CornerRadius="10"                     
+ BorderThickness="1"
+ Opacity="0.75">
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="0,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18" Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18"  Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid>
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <TextBlock TextWrapping="Wrap" Text="Username"/>
+                    <TextBox Name="UsernameTextBox" Text="{Binding Username}" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Password"/>
+                    <PasswordBox Name="PasswordBox" helpers:PasswordHelper.Attach="True"  helpers:PasswordHelper.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
+                    <Button Content="Login" Command="{Binding LoginCommand}" Width="200"  Margin="0,0,0,10"/>
+                    <Button Content="Register" Command="{Binding RegisterCommand}" Width="200" />
+                </StackPanel>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
