--- a/test2/Views/NewLeaveRequestWindow.xaml
+++ b/test2/Views/NewLeaveRequestWindow.xaml
@@ -6,40 +6,63 @@
         xmlns:local="clr-namespace:test2.Views" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:NewLeaveRequestViewModel}"
         mc:Ignorable="d"
         Title="NewLeaveRequestWindow" Height="450" Width="800">
-    <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            
-            <TextBlock TextWrapping="Wrap" Text="Employee"/>
-            <TextBox x:Name="EmployeeTextBox" Text="{Binding Employee}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Absence Reason (Required)"/>
-            <ComboBox Name="comboBox"  ItemsSource="{Binding Items}"
+    <Border CornerRadius="12">
+        <Border CornerRadius="10"                     
+BorderThickness="1"
+Opacity="0.75">
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="0,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18" Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18"  Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid>
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+
+                    <TextBlock TextWrapping="Wrap" Text="Employee"/>
+                    <TextBox x:Name="EmployeeTextBox" Text="{Binding Employee}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Absence Reason (Required)"/>
+                    <ComboBox Name="comboBox"  ItemsSource="{Binding Items}"
                   SelectedItem="{Binding SelectedItem}"
 Width="200" 
 Height="30" 
 VerticalAlignment="Center" 
 HorizontalAlignment="Center">
-                
 
-            </ComboBox>
-            <TextBlock TextWrapping="Wrap" Text="Start Date (Required)"/>
-            <DatePicker Name="StartDate"  SelectedDate="{Binding StartDate}"/>
-            <TextBlock TextWrapping="Wrap" Text="End Date (Required)"/>
-            <DatePicker Name="EndDate" SelectedDate="{Binding EndDate}"/>
-            <TextBlock TextWrapping="Wrap" Text="Comment"/>
-            <TextBox x:Name="CommentTextBox"  Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Status"/>
-            <ComboBox Name="comboBox2" IsEnabled="False" ItemsSource="{Binding Items2}"
+
+                    </ComboBox>
+                    <TextBlock TextWrapping="Wrap" Text="Start Date (Required)"/>
+                    <DatePicker Name="StartDate"  SelectedDate="{Binding StartDate}"/>
+                    <TextBlock TextWrapping="Wrap" Text="End Date (Required)"/>
+                    <DatePicker Name="EndDate" SelectedDate="{Binding EndDate}"/>
+                    <TextBlock TextWrapping="Wrap" Text="Comment"/>
+                    <TextBox x:Name="CommentTextBox"  Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Status"/>
+                    <ComboBox Name="comboBox2" IsEnabled="False" ItemsSource="{Binding Items2}"
                   SelectedItem="{Binding SelectedItem2}"
 Width="200" 
 Height="30" 
 VerticalAlignment="Center" 
 HorizontalAlignment="Center"
 >
-                
 
 
-            </ComboBox>
-            <Button Content="Submit" Width="200"   Command="{Binding SubmitCommand}"/>
-        </StackPanel>
-    </Grid>
+
+                    </ComboBox>
+                    <Button Content="Submit" Width="200"   Command="{Binding SubmitCommand}"/>
+                </StackPanel>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
