--- a/test2/Views/NewProjectWindow.xaml
+++ b/test2/Views/NewProjectWindow.xaml
@@ -6,46 +6,69 @@
         xmlns:local="clr-namespace:test2.Views" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:NewProjectViewModel}"
         mc:Ignorable="d"
         Title="NewProjectWindow" Height="450" Width="800">
-    <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+    <Border CornerRadius="12">
+        <Border CornerRadius="10"                     
+ BorderThickness="1"
+ Opacity="0.75">
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="0,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18" Offset="1"/>
 
-            <TextBlock TextWrapping="Wrap"  Text="Project Type (Required)"/>
-            <ComboBox Name="comboBox"  ItemsSource="{Binding Items}"
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18"  Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid>
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+
+                    <TextBlock TextWrapping="Wrap"  Text="Project Type (Required)"/>
+                    <ComboBox Name="comboBox"  ItemsSource="{Binding Items}"
                   SelectedItem="{Binding SelectedItem}"
       Width="200" 
       Height="30" 
       VerticalAlignment="Center" 
       HorizontalAlignment="Center">
-                
-            </ComboBox>
-            <TextBlock TextWrapping="Wrap" Text="Start Date (Required)"/>
-            <DatePicker Name="StartDatePicker"  SelectedDate="{Binding StartDate}" >
-            </DatePicker>
-            <TextBlock TextWrapping="Wrap" Text="End Date" />
-            <DatePicker Name="EndDatePicker"  SelectedDate="{Binding EndDate}" >
-            </DatePicker>
-            <TextBlock TextWrapping="Wrap" Text="Project Manager"/>
-            <ComboBox Name="comboBox2" ItemsSource="{Binding Items2}"
+
+                    </ComboBox>
+                    <TextBlock TextWrapping="Wrap" Text="Start Date (Required)"/>
+                    <DatePicker Name="StartDatePicker"  SelectedDate="{Binding StartDate}" >
+                    </DatePicker>
+                    <TextBlock TextWrapping="Wrap" Text="End Date" />
+                    <DatePicker Name="EndDatePicker"  SelectedDate="{Binding EndDate}" >
+                    </DatePicker>
+                    <TextBlock TextWrapping="Wrap" Text="Project Manager"/>
+                    <ComboBox Name="comboBox2" ItemsSource="{Binding Items2}"
                   SelectedItem="{Binding SelectedItem2}"
       Width="200" 
       Height="30" 
       VerticalAlignment="Center" 
       HorizontalAlignment="Center">
-            </ComboBox>
-            <TextBlock TextWrapping="Wrap" Text="Comment"/>
-            <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Project Status (Required)"/>
-            <ComboBox Name="comboBox3"  ItemsSource="{Binding Items3}"
+                    </ComboBox>
+                    <TextBlock TextWrapping="Wrap" Text="Comment"/>
+                    <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Project Status (Required)"/>
+                    <ComboBox Name="comboBox3"  ItemsSource="{Binding Items3}"
                   SelectedItem="{Binding SelectedItem3}"
 Width="200" 
 Height="30" 
 VerticalAlignment="Center" 
 HorizontalAlignment="Center"
 >
-                
 
-            </ComboBox>
-            <Button Content="Add project" Width="200" Command="{Binding AddProjectCommand}"/>
-        </StackPanel>
-    </Grid>
+
+                    </ComboBox>
+                    <Button Content="Add project" Width="200" Command="{Binding AddProjectCommand}"/>
+                </StackPanel>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
