--- a/test2/Views/OpenApprovalRequestWindow.xaml
+++ b/test2/Views/OpenApprovalRequestWindow.xaml
@@ -5,34 +5,58 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:test2.Views" xmlns:converters="clr-namespace:test2.Converters" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:OpenApprovalRequestViewModel}"
         mc:Ignorable="d"
-        Title="OpenApprovalRequestWindow" Height="450" Width="800">
+        Title="Approval Request" Height="450" Width="800">
     <Window.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
     </Window.Resources>
-    <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock TextWrapping="Wrap" Text="Id"/>
-            <TextBox x:Name="IdTextBox" Text="{Binding Id}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Approver"/>
-            <TextBox x:Name="ApproverTextBox" Text="{Binding Approver}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Leave request"/>
-            <TextBox x:Name="LeaverequestTextBox" Text="{Binding LeaveRequestt}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Status"/>
-            <ComboBox Name="comboBox" IsEnabled="{Binding IsComboBoxEnabled}"  ItemsSource="{Binding Items}"
+
+    <Border CornerRadius="12">
+        <Border CornerRadius="10"                     
+    BorderThickness="1"
+    Opacity="0.75">
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="0,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18" Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18"  Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid>
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <TextBlock TextWrapping="Wrap" Text="Id"/>
+                    <TextBox x:Name="IdTextBox" Text="{Binding Id}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Approver"/>
+                    <TextBox x:Name="ApproverTextBox" Text="{Binding Approver}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Leave request"/>
+                    <TextBox x:Name="LeaverequestTextBox" Text="{Binding LeaveRequestt}" IsReadOnly="True" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Status"/>
+                    <ComboBox Name="comboBox" IsEnabled="{Binding IsComboBoxEnabled}"  ItemsSource="{Binding Items}"
                   SelectedItem="{Binding SelectedItem}"
-Width="200" 
-Height="30" 
-VerticalAlignment="Center" 
-HorizontalAlignment="Center">
-                
-            </ComboBox>
-            
-            <TextBlock TextWrapping="Wrap" Text="Comment"/>
-            <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
+                    Width="200" 
+                    Height="30" 
+                    VerticalAlignment="Center" 
+                    HorizontalAlignment="Center">
+
+                    </ComboBox>
+
+                    <TextBlock TextWrapping="Wrap" Text="Comment"/>
+                    <TextBox x:Name="CommentTextBox" Text="{Binding Comment}" Width="200" Margin="0,0,0,10"/>
 
 
-            <Button Name="ApproveButton" Visibility="{Binding IsButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding ApproveCommand}" Content="Approve request" Width="200"/>
-            <Button Name="RejectButton" Visibility="{Binding IsButtonVisible2, Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding RejectCommand}" Content="Reject request" Width="200"/>
-        </StackPanel>
-    </Grid>
+                    <Button Name="ApproveButton" Visibility="{Binding IsButtonVisible, Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding ApproveCommand}" Content="Approve request" Width="200"/>
+                    <Button Name="RejectButton" Visibility="{Binding IsButtonVisible2, Converter={StaticResource BooleanToVisibilityConverter}}" Command="{Binding RejectCommand}" Content="Reject request" Width="200"/>
+                </StackPanel>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
