--- a/test2/Views/RegisterWindow.xaml
+++ b/test2/Views/RegisterWindow.xaml
@@ -6,21 +6,41 @@
         xmlns:local="clr-namespace:test2.Views"  xmlns:helpers="clr-namespace:test2.Helpers" xmlns:viewmodels="clr-namespace:test2.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:RegisterViewModel}"
         mc:Ignorable="d"
         Title="RegisterWindow" Height="850" Width="800">
+    <Border CornerRadius="12">
+        <Border CornerRadius="10"                     
+    BorderThickness="1"
+    Opacity="0.75">
+            <Border.BorderBrush>
+                <LinearGradientBrush StartPoint="0,1" EndPoint="0,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18" Offset="1"/>
 
-    <Grid>
-        <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
-            <TextBlock TextWrapping="Wrap" Text="Username (Required)"/>
-            <TextBox x:Name="UsernameTextBox" Text="{Binding Username}" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Password (Required)"/>
-            <PasswordBox x:Name="PasswordBox" helpers:PasswordHelper.Attach="True"  helpers:PasswordHelper.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Confirm password (Required)"/>
-            <PasswordBox x:Name="ConfirmPasswordBox" helpers:PasswordHelper.Attach="True" helpers:PasswordHelper.Password="{Binding ConfirmPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
-            <TextBlock TextWrapping="Wrap" Text="Full name (Required)"/>
-            <TextBox x:Name="FullnameTextBox" Text="{Binding FullName}" Width="200"  Margin="0,0,0,10"/>
+                </LinearGradientBrush>
+            </Border.BorderBrush>
+
+            <Border.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#2946AA" Offset="0"/>
+                    <GradientStop Color="#BDBEDD" Offset="0.6"/>
+                    <GradientStop Color="#FF3EFA18"  Offset="1"/>
+
+                </LinearGradientBrush>
+            </Border.Background>
+            <Grid>
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <TextBlock TextWrapping="Wrap" Text="Username (Required)"/>
+                    <TextBox x:Name="UsernameTextBox" Text="{Binding Username}" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Password (Required)"/>
+                    <PasswordBox x:Name="PasswordBox" helpers:PasswordHelper.Attach="True"  helpers:PasswordHelper.Password="{Binding Password, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Confirm password (Required)"/>
+                    <PasswordBox x:Name="ConfirmPasswordBox" helpers:PasswordHelper.Attach="True" helpers:PasswordHelper.Password="{Binding ConfirmPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Width="200" Margin="0,0,0,10"/>
+                    <TextBlock TextWrapping="Wrap" Text="Full name (Required)"/>
+                    <TextBox x:Name="FullnameTextBox" Text="{Binding FullName}" Width="200"  Margin="0,0,0,10"/>
 
 
-            <TextBlock TextWrapping="Wrap" Text="Subdivision (Required)"/>
-            <ComboBox Name="comboBox" ItemsSource="{Binding ItemsSubdivision}" 
+                    <TextBlock TextWrapping="Wrap" Text="Subdivision (Required)"/>
+                    <ComboBox Name="comboBox" ItemsSource="{Binding ItemsSubdivision}" 
                    
                   SelectedItem="{Binding SelectedItem, Mode=TwoWay}"  
                   Width="200" 
@@ -28,10 +48,10 @@
                   VerticalAlignment="Center" 
                   HorizontalAlignment="Center"
                   >
-                
-            </ComboBox>
-            <TextBlock TextWrapping="Wrap" Text="Position (Required)"/>
-            <ComboBox Name="comboBox2" ItemsSource="{Binding ItemsPosition}" 
+
+                    </ComboBox>
+                    <TextBlock TextWrapping="Wrap" Text="Position (Required)"/>
+                    <ComboBox Name="comboBox2" ItemsSource="{Binding ItemsPosition}" 
                    
                   SelectedItem="{Binding SelectedItem2, Mode=TwoWay}" 
        Width="200" 
@@ -39,11 +59,11 @@
        VerticalAlignment="Center" 
        HorizontalAlignment="Center"
        >
-                
 
-            </ComboBox>
-            <TextBlock TextWrapping="Wrap" Text="Status (Required)"/>
-            <ComboBox Name="comboBox3" ItemsSource="{Binding ItemsStatus}" 
+
+                    </ComboBox>
+                    <TextBlock TextWrapping="Wrap" Text="Status (Required)"/>
+                    <ComboBox Name="comboBox3" ItemsSource="{Binding ItemsStatus}" 
                    
                   SelectedItem="{Binding SelectedItem3, Mode=TwoWay}" 
         Width="200" 
@@ -51,12 +71,12 @@
         VerticalAlignment="Center" 
         HorizontalAlignment="Center"
         >
-                
-                
 
-            </ComboBox>
-            <TextBlock TextWrapping="Wrap" Text="People Partner (Required)"/>
-            <ComboBox Name="comboBox4" ItemsSource="{Binding ItemsPP}" 
+
+
+                    </ComboBox>
+                    <TextBlock TextWrapping="Wrap" Text="People Partner (Required)"/>
+                    <ComboBox Name="comboBox4" ItemsSource="{Binding ItemsPP}" 
                   DisplayMemberPath="Name" 
                   SelectedItem="{Binding SelectedItem4, Mode=TwoWay}" 
 Width="200" 
@@ -64,17 +84,19 @@ Height="30"
 VerticalAlignment="Center" 
 HorizontalAlignment="Center"
 >
-  
 
 
-            </ComboBox>
-            
-            <TextBlock TextWrapping="Wrap" Text="Photo"/>
-            <Image Name="PhotoImage" Source="{Binding ImageSource}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0" Width="200" Height="200"/>
-            <Button Content="Add photo" Command="{Binding AddPhotoCommand}" Width="200" />
-            <Button Content="Register" Command="{Binding RegisterCommand}" Width="200" />
-        </StackPanel>
+
+                    </ComboBox>
+
+                    <TextBlock TextWrapping="Wrap" Text="Photo"/>
+                    <Image Name="PhotoImage" Source="{Binding ImageSource}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,50,0,0" Width="200" Height="200"/>
+                    <Button Content="Add photo" Command="{Binding AddPhotoCommand}" Width="200" />
+                    <Button Content="Register" Command="{Binding RegisterCommand}" Width="200" />
+                </StackPanel>
 
 
-    </Grid>
+            </Grid>
+        </Border>
+    </Border>
 </Window>
